--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ScheduledEpisodesPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ScheduledEpisodesPage.xaml
@@ -8,13 +8,19 @@
              xmlns:views="clr-namespace:Pekspro.RadioStorm.MAUI.Views"
              xmlns:controls="clr-namespace:Pekspro.RadioStorm.MAUI.Controls"
              xmlns:r="clr-namespace:Pekspro.RadioStorm.UI.Resources;assembly=Pekspro.RadioStorm.UI"
+             xmlns:c="clr-namespace:Pekspro.RadioStorm.MAUI.Controls"
              xmlns:search="clr-namespace:Pekspro.RadioStorm.UI.ViewModel.Search;assembly=Pekspro.RadioStorm.UI"
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Channel.ScheduledEpisodesPage"
              x:DataType="vm:SchedulesEpisodesViewModel"
-             Title="{x:Static r:Strings.Channel_ScheduleEpisodes}"
              >
+    <ContentPage.Title>
+        <MultiBinding StringFormat="{x:Static r:Strings.Channel_ScheduleEpisodes_Title}">
+            <Binding Path="Title" />
+        </MultiBinding>
+    </ContentPage.Title>
     <ContentPage.ToolbarItems>
-        <ToolbarItem 
+        <c:BindableToolbarItem 
+                x:Name="ToolbarItemUpdate"
                 Command="{Binding UpdateCommand}"
                 Text="{x:Static r:Strings.General_Update}"
                 Order="Secondary"
@@ -23,8 +29,22 @@
 
     <Grid RowDefinitions="Auto,*,Auto">
 
-        <views:DownloadState Grid.Row="0" Grid.RowSpan="2" />
+        <Border Style="{StaticResource Card}" 
+                Grid.Row="0" 
+                IsVisible="{Binding HasError, Converter={StaticResource InvertedBoolConverter}}"
+                Margin="{StaticResource NormalPageMargin}">
+            <HorizontalStackLayout Style="{StaticResource CardLayout}">
+                <Label Text="{x:Static r:Strings.Channel_ScheduleEpisodes_Date}" Margin="{OnPlatform Default='0,10,8,0', WinUI='0,6,0,0'}" />
 
+                <Picker ItemsSource="{Binding DateOptions}"
+                        SelectedIndex="{Binding DateOptionIndex, Mode=TwoWay}"
+                        Margin="{OnPlatform Default='0', WinUI='0,0,0,12'}"
+                        />
+            </HorizontalStackLayout>
+        </Border>
+
+        <views:DownloadState Grid.Row="1" NoDataText="{x:Static r:Strings.Channel_ScheduleEpisodes_NoData}" />
+        
         <!-- Breaks on Android: ItemSizingStrategy="MeasureFirstItem"-->
         <RefreshView 
                 Command="{Binding RefreshCommand}" 
