--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
@@ -126,6 +126,6 @@
         />-->
     </Grid>
 
-    <views:PlayerPositionControl Grid.Row="1" Grid.ColumnSpan="4" IsVisible="{Binding PlayerViewModel.IsCurrentItemEpisode}" />
+    <views:PlayerPositionControl Grid.Row="1" Grid.ColumnSpan="4" />
 
 </Grid>
