--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerPositionControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerPositionControl.xaml
@@ -5,6 +5,7 @@
             xmlns:views="clr-namespace:Pekspro.RadioStorm.MAUI.Views"
             x:Class="Pekspro.RadioStorm.MAUI.Views.PlayerPositionControl"             
             x:DataType="player:PlayerViewModel"
+            IsVisible="{Binding IsCurrentItemEpisode}"
             HeightRequest="36"
             >
     <Grid>
