Tweaks styling on hyperlink buttons.

--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -196,7 +196,8 @@
                 <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
                 <Setter Property="LineBreakMode" Value="TailTruncation" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
-                <Setter Property="HeightRequest" Value="36" />
+                <Setter Property="HeightRequest" Value="44" />
+                <Setter Property="MinimumHeightRequest" Value="44" />
                 <Setter Property="Padding" Value="4,0" />
                 <Setter Property="Margin" Value="-4,0,0,0" />
                 <Setter Property="BorderWidth" Value="0" />
