Fixes shell icons sizes.

--- a/Source/Pekspro.RadioStorm.MAUI/AppShell.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/AppShell.xaml
@@ -96,11 +96,12 @@
                                    FontSize="16"
                                    />
 
+                            <!-- Fill="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}" -->
                             <Path Grid.Column="0"   
                                 Style="{x:StaticResource PathMenuFavorite}"
                                 HorizontalOptions="Center"
                                 IsVisible="{OnPlatform Default=True, WinUI=False}"
-                                Fill="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                                HeightRequest="36"
                                 WidthRequest="36"
                                 />
 
@@ -131,6 +132,7 @@
                                 HorizontalOptions="Center"
                                 IsVisible="{OnPlatform Default=True, WinUI=False}"
                                 Fill="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                                HeightRequest="36"
                                 WidthRequest="36"
                                 />
 
@@ -161,6 +163,7 @@
                                 HorizontalOptions="Center"
                                 IsVisible="{OnPlatform Default=True, WinUI=False}"
                                 Fill="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                                HeightRequest="36"
                                 WidthRequest="36"
                                 />
 
@@ -192,6 +195,7 @@
                                 HorizontalOptions="Center"
                                 IsVisible="{OnPlatform Default=True, WinUI=False}"
                                 Fill="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                                HeightRequest="36"
                                 WidthRequest="36"
                                 />
 
@@ -222,6 +226,7 @@
                                 HorizontalOptions="Center"
                                 IsVisible="{OnPlatform Default=True, WinUI=False}"
                                 Fill="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                                HeightRequest="36"
                                 WidthRequest="36"
                                 />
 
@@ -252,6 +257,7 @@
                                 HorizontalOptions="Center"
                                 IsVisible="{OnPlatform Default=True, WinUI=False}"
                                 Fill="{AppThemeBinding Dark={StaticResource PanelIconColorDark}, Light={StaticResource PanelIconColorLight}}"
+                                HeightRequest="36"
                                 WidthRequest="36"
                                 />
 
