--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
@@ -1,14 +1,15 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:Pekspro.RadioStorm.UI.Model.Channel;assembly=Pekspro.RadioStorm.UI"
+             xmlns:favvm="clr-namespace:Pekspro.RadioStorm.UI.ViewModel.Favorite;assembly=Pekspro.RadioStorm.UI"
              xmlns:style="clr-namespace:Pekspro.RadioStorm.MAUI.Resources.Styles"
              xmlns:views="clr-namespace:Pekspro.RadioStorm.MAUI.Views"
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Channel.ChannelAlbumControl"
              x:DataType="vm:ChannelModel"
              >
 
-    <Border Style="{StaticResource AlbumCard}">
-        <Grid Style="{StaticResource AlbumItem}">
+    <Border Style="{StaticResource AlbumCard}" WidthRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardWidth}">
+        <Grid Style="{StaticResource AlbumItem}" x:Name="AlbumItem" SizeChanged="AlbumItem_SizeChanged">
             <Label  Grid.Row="0"
                     Grid.ColumnSpan="2"
                     Text="{Binding Title, Mode=OneWay}"
@@ -25,9 +26,10 @@
                     />
 
             <views:LargeMediaButtonUserControl 
+                x:Name="LargeMediaButton"
                 Grid.ColumnSpan="2"
                 Grid.Row="1"
-                WidthRequest="140"
+                WidthRequest="100"
                 HeightRequest="140"
                 Source="{Binding Status.CurrentProgramImage.HighResolution, Mode=OneWay}"
                 Command="{Binding PlayPauseCommand, Mode=OneWay}"
